# rust-api

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
examples/cors-demo/: Cargo.toml
examples/cors-demo/src/: main.rs
examples/extensions-demo/src/: main.rs
examples/extractors-demo/: Cargo.toml
examples/extractors-demo/src/: main.rs
examples/file-serving/src/: main.rs
examples/form-handling/src/: main.rs
examples/hello-world/src/: main.rs
examples/middleware-composition/: Cargo.toml
examples/middleware-composition/src/: main.rs
examples/middleware-test/: Cargo.toml
examples/middleware-test/src/: main.rs
examples/nested-routing/: Cargo.toml
examples/nested-routing/src/: main.rs
examples/per-route-middleware/src/: main.rs
examples/state-management/src/: main.rs
examples/websocket-echo/: Cargo.toml
examples/websocket-echo/src/: main.rs
rust-api-middleware/: Cargo.toml
rust-api-middleware/client/: Cargo.toml  README.md
rust-api-middleware/cors/: Cargo.toml  README.md
rust-api-middleware/cors/examples/cors-demo/: Cargo.toml
rust-api-middleware/cors/examples/cors-demo/src/: main.rs
rust-api-middleware/cors/src/: lib.rs
rust-api-middleware/error-handlers/: Cargo.toml  README.md
rust-api-middleware/error-handlers/src/: lib.rs
rust-api-middleware/extractors/: Cargo.toml
rust-api-middleware/extractors/src/: lib.rs
rust-api-middleware/helpers/: Cargo.toml  README.md
rust-api-middleware/helpers/src/: lib.rs
src/: api.rs  error.rs  error_handler.rs  extractors.rs  into_res.rs  lib.rs  middleware.rs  middleware_helpers.rs  req.rs  res.rs  route.rs  router.rs  websocket.rs
