[package]
name = "rust-api-extractors"
version = "0.0.1"
edition = "2024"
authors = ["Eric Kweyunga <maverickweyunga@gmail.com>"]
description = "Type-safe extractors for Rust Api framework"
license = "MIT"

[dependencies]
rust-api = { path = "../..", version = "0.0.1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
async-trait = "0.1"
hyper = "1"
bytes = "1"
http-body-util = "0.1"
